--- a/translations/values-tr/help.xml
+++ b/translations/values-tr/help.xml
@@ -19,7 +19,7 @@
     <string name="faq_connection">Bağlantı</string>
     <string name="text_faq_con">
         <b>Nasıl bağlanırım?</b>\n
-         \u00A0\u00A0 Uygulamanın, War Thunder çalıştıran bilgisayarınızın IP adresini, IP'nizi nasıl alacağınızı görmesi gerekir. http://ip.junkcode.net \n\n
+         \u00A0\u00A0 Uygulamanın, War Thunder çalıştıran bilgisayarınızın IP adresini, IP\'nizi nasıl alacağınızı görmesi gerekir. http://ip.junkcode.net \n\n
          
         <b>IP girdim ve hala diyor \"Bağlantı Yok\"</b>\n
          \u00A0\u00A0 Yerel ağ yönlendirmenizde sorun olabilir. http://ip.junkcode.net/help \n\n
