--- a/translations/values-cs/strings.xml
+++ b/translations/values-cs/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">WT: taktická mapa</string>
+    <string name="app_name">Taktická Mapa</string>
     
     <string name="settings">Nastavení</string>
     <string name="hide">Schovat</string>
@@ -194,6 +194,9 @@
     <string name="allow_data_collection">Povolit anonymní sběr dat</string>
     <string name="data_collection_explained">Řídí se pravidly Google Analytics a data jsou využita k vylepšovaní aplikace.</string>
     <string name="dynamic_zoom">Dynamický zoom mapy</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
 
