--- a/translations/values-de/strings.xml
+++ b/translations/values-de/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">WarThunder Taktische Karte</string>
+    <string name="app_name">Taktische Karte</string>
 
     <string name="settings">Einstellungen</string>
     <string name="hide">Ausblenden</string>
@@ -192,5 +192,8 @@
     <string name="allow_data_collection">Anonyme Datensammlung ermöglichen</string>
     <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
