--- a/translations/values-es/strings.xml
+++ b/translations/values-es/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">WarThunder mapa táctico</string>
+    <string name="app_name">Mapa Táctico</string>
     
     <string name="settings">Ajustes</string>
     <string name="hide">Esconder</string>
@@ -193,5 +193,8 @@
     <string name="allow_data_collection">Permitir la recolección de datos anónimos</string>
     <string name="data_collection_explained">Con el cumplimiento de las reglas de Google Analytics, ayudando a que la aplicación sea mejor para ti.</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
