--- a/translations/values-hu/strings.xml
+++ b/translations/values-hu/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">WarThunder taktikai térkép</string>
+    <string name="app_name">Taktikai Térkép</string>
     
     <string name="settings">Beállítások</string>
     <string name="hide">Elrejt</string>
@@ -193,5 +193,8 @@
     <string name="allow_data_collection">Allow anonymous data collection</string>
     <string name="data_collection_explained">With compliance by Google Analytics rules, helping to make the app better for You.</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
