--- a/translations/values-it/strings.xml
+++ b/translations/values-it/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">WarThunder Mappa Tattica</string>
+    <string name="app_name">Mappa Tattica</string>
     
     <string name="settings">Impostazioni</string>
     <string name="hide">Nascondi</string>
@@ -193,5 +193,8 @@
     <string name="allow_data_collection">Permetti la raccolta dati d\'utilizzo</string>
     <string name="data_collection_explained">In accordo con le regole di Google Analytics , per aiutare lo svuluppo ed il miglioramento dell\'app.</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
