--- a/translations/values-ja/strings.xml
+++ b/translations/values-ja/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">WarThunder tactical map</string>
+    <string name="app_name">Tactical Map</string>
     
     <string name="settings">設定</string>
     <string name="hide">隠す</string>
@@ -192,5 +192,8 @@
     <string name="allow_data_collection">匿名データの送信を許可</string>
     <string name="data_collection_explained">Google Analyticsの規則に則ったデータ収集で，より多くの方に便利なアプリ開発を行えます．</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
