--- a/translations/values-nl/strings.xml
+++ b/translations/values-nl/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">WarThunder tactische kaart</string>
+    <string name="app_name">Tactische Kaart</string>
     
     <string name="settings">Instellingen</string>
     <string name="hide">Verberg</string>
@@ -193,5 +193,8 @@
     <string name="allow_data_collection">Anonieme data verzameling toestaan</string>
     <string name="data_collection_explained">Door te voldoen aan de regels van Google Analitics, help je de app beter te maken.</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
