--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">Тактическая карта WarThunder</string>
+    <string name="app_name">Тактическая карта</string>
     
     <string name="settings">Настройки</string>
     <string name="hide">Скрыть</string>
@@ -193,5 +193,8 @@
     <string name="allow_data_collection">Собирать анонимную статистику</string>
     <string name="data_collection_explained">С соблюдением правил Google Analytics, это помогает улучшать приложение для Вас.</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
