--- a/translations/values-zh-rTW/strings.xml
+++ b/translations/values-zh-rTW/strings.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">戰爭雷霆戰術地圖</string>
+    <string name="app_name">戰術地圖</string>
     
     <string name="settings">設置</string>
     <string name="hide">隱藏</string>
@@ -195,5 +195,8 @@
     <string name="allow_data_collection">允許匿名數據收集</string>
     <string name="data_collection_explained">遵從谷歌Analytics（分析）的規則，有助於使應用程序更好地為您服務。</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
