--- a/translations/values-zh/strings.xml
+++ b/translations/values-zh/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">战争雷霆战术地图</string>
+    <string name="app_name">战术地图</string>
     
     <string name="settings">设置</string>
     <string name="hide">隐藏</string>
@@ -195,5 +195,8 @@
     <string name="allow_data_collection">允许匿名数据收集</string>
     <string name="data_collection_explained">遵从谷歌Analytics（分析）的规则，有助于使应用程序更好地为您服务。</string>
     <string name="dynamic_zoom">Dynamic map zooming</string>
+    <string name="watch_ad_for_extra">Wach Ad for Extra Features</string>
+    <string name="extras_unlock_until">Extras unlocked until <xliff:g id="time" example="18:30">%1$s</xliff:g></string>
+    <string name="watch_ad_for_extra_support">Watch ad to show Extra support</string>
 
 </resources>
