Tactical Map RC 1.04

--- a/translations/values-cs/help.xml
+++ b/translations/values-cs/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">Vylepšení aplikace</string>
     <string name="text_faq_improve">"  
         <b>Něco se mi nelíbí</b>\n
-         \u00A0\u00A0 Dejte nám vědět co - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Dejte nám vědět co - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Našel sem chybu</b>\n
          \u00A0\u00A0 Napište ji sem - http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Mám nápad na další funkčnost</b>\n
-         \u00A0\u00A0 Dejte nám vědět - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Dejte nám vědět - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Chci pomoct s překladem/ikonama/...</b>\n
-         \u00A0\u00A0 Část zdrojových souborů už je tady http://github.com/JunkCode/wtTactMap. Můžete tam přímo navrhnout změny nebo na základě těch souborů vytvořit další. Pokud máte nějaké otázky nebo další nápady, dejte nám vědět - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Část zdrojových souborů už je tady http://github.com/JunkCode/wtTactMap. Můžete tam přímo navrhnout změny nebo na základě těch souborů vytvořit další. Pokud máte nějaké otázky nebo další nápady, dejte nám vědět - https://github.com/JunkCode/wtTactMap \n\n
          
     </string>
     
