--- a/translations/values-el/help.xml
+++ b/translations/values-el/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">Βελτίωση εφαρμογής</string>
     <string name="text_faq_improve">"  
         <b>Δεν μου αρέσει κάτι</b>\n
-         \u00A0\u00A0 Πέστο μας - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Πέστο μας - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Βρήκα ένα πρόβλημαI found a bug</b>\n
          \u00A0\u00A0 Γράψτο εδώ http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Έχω μια ιδέα για καινούργιο χαρακτηριστικό</b>\n
-         \u00A0\u00A0 Πέστο μας - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Πέστο μας - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Θέλω να βοηθήσω στην μετάφραση/εικονίδια/...</b>\n
-         \u00A0\u00A0 Μερικοί από τους πόρους υπάρχουν ήδη εδώ http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Μερικοί από τους πόρους υπάρχουν ήδη εδώ http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - https://github.com/JunkCode/wtTactMap \n\n
           
     </string>
     
