--- a/translations/values-en/help.xml
+++ b/translations/values-en/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">App improvement</string>
     <string name="text_faq_improve">"  
         <b>I don\'t like something</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Let us know what - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>I found a bug</b>\n
          \u00A0\u00A0 Post it here http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>I have idea for new feature</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Let us know what - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>I want to help with translation/icons/...</b>\n
-         \u00A0\u00A0 Some of the resources are already here http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Some of the resources are already here http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - https://github.com/JunkCode/wtTactMap \n\n
           
     </string>
     
