--- a/translations/values-es/help.xml
+++ b/translations/values-es/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">Mejoras de la App</string>
     <string name="text_faq_improve">"  
         <b>No me gusta algo</b>\n
-         \u00A0\u00A0 Coméntanoslo en - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Coméntanoslo en - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>He encontrado un fallo</b>\n
          \u00A0\u00A0 Inclúyelo aquí, http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Tengo una idea para una nueva funcionalidad</b>\n
-         \u00A0\u00A0 Coméntanoslo en - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Coméntanoslo en - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Quiero ayuda con la traducción/iconos/...</b>\n
-         \u00A0\u00A0 Algunos de los recursos están disponibles en http://github.com/JunkCode/wtTactMap Puedes proponer modificaciones o añadir nuevos. Si tienes preguntas o ideas coméntanoslas aquí - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Algunos de los recursos están disponibles en http://github.com/JunkCode/wtTactMap Puedes proponer modificaciones o añadir nuevos. Si tienes preguntas o ideas coméntanoslas aquí - https://github.com/JunkCode/wtTactMap \n\n
          
     </string>
     
