--- a/translations/values-fr/help.xml
+++ b/translations/values-fr/help.xml
@@ -40,16 +40,16 @@
     <string name="faq_improvement">Amélioration de l\'appli</string>
     <string name="text_faq_improve">"  
         <b>Je n\'aime pas quelque chose</b>\n
-         \u00A0\u00A0 Faites-nous savoir ce que c\'est - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Faites-nous savoir ce que c\'est - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>J\'ai trouvé un bug</b>\n
          \u00A0\u00A0 Publiez le ici http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>J\'ai une idée pour une nouvelle fonctionnalité</b>\n
-         \u00A0\u00A0 Faites-nous savoir ce que c\'est - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Faites-nous savoir ce que c\'est - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Je veux aider pour la traduction/icons/...</b>\n
-         \u00A0\u00A0 Certaines des ressources sont déjà ici http://github.com/JunkCode/wtTactMap Vous pouvez proposer des modifications ou ajouter de nouvelles choses. Si vous avez une question ou d\'autres idées, faites-nous le savoir - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Certaines des ressources sont déjà ici http://github.com/JunkCode/wtTactMap Vous pouvez proposer des modifications ou ajouter de nouvelles choses. Si vous avez une question ou d\'autres idées, faites-nous le savoir - https://github.com/JunkCode/wtTactMap \n\n
         "
     </string>
     
