--- a/translations/values-hu/help.xml
+++ b/translations/values-hu/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">App fejlesztés</string>
     <string name="text_faq_improve">"  
         <b>Nem tetszik valami!</b>\n
-         \u00A0\u00A0 Írd meg - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Írd meg - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Hibát találtam!</b>\n
          \u00A0\u00A0 Írd meg http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Van egy új ötletem!</b>\n
-         \u00A0\u00A0 Írd meg - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Írd meg - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Szeretnék segíteni a fordításban/ikonokban stb.</b>\n
-         \u00A0\u00A0 Néhány forrást megtalálsz itt: http://github.com/JunkCode/wtTactMap Itt tudsz módosításokat kérni, vagy új dolgokat megadni. Ha bármi kérdésed van, vagy ötleted, írd meg - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Néhány forrást megtalálsz itt: http://github.com/JunkCode/wtTactMap Itt tudsz módosításokat kérni, vagy új dolgokat megadni. Ha bármi kérdésed van, vagy ötleted, írd meg - https://github.com/JunkCode/wtTactMap \n\n
          
     </string>
     
