--- a/translations/values-it/help.xml
+++ b/translations/values-it/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">App improvement</string>
     <string name="text_faq_improve">"  
         <b>Non mi piace qualche cosa</b>\n
-         \u00A0\u00A0 Facci sapere cosa in dettaglio - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Facci sapere cosa in dettaglio - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Ho trovato un bug</b>\n
          \u00A0\u00A0 Pubblicalo su questa pagina http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Ho un\'idea per una nuova funzione</b>\n
-         \u00A0\u00A0 Faccelo sapere (preferibilmente in inglese) - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Faccelo sapere (preferibilmente in inglese) - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Voglio aiustare con la traduzione/icons/...</b>\n
-         \u00A0\u00A0 Parte delle risorse le puoi trovare su http://github.com/JunkCode/wtTactMap Puoi proporre modifiche ed aggiunte. Se hai domande o suggerimenti  - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Parte delle risorse le puoi trovare su http://github.com/JunkCode/wtTactMap Puoi proporre modifiche ed aggiunte. Se hai domande o suggerimenti  - https://github.com/JunkCode/wtTactMap \n\n
          "
     </string>
     
