--- a/translations/values-nl/strings.xml
+++ b/translations/values-nl/strings.xml
@@ -50,9 +50,9 @@
     <string name="info_msg">
         "Dit is een onofficieele app gemaakt door War Thunder fans!\n"
         "Deze app is in beta, maar neem gerust contact met ons op over bugs of over nieuwe ideën:\n"
-        "http://junkcode.net/forum \n"
+        "https://github.com/JunkCode/wtTactMap \n"
         "\n"
-        "We zijn nog op zoek naar mensen om deze app te vertalen, als je wilt helpen kijk dan op http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \n"
+        "We zijn nog op zoek naar mensen om deze app te vertalen, als je wilt helpen kijk dan op http://wiki.junkcode.net/doku.php/support:wt_tactical_map:translations \n"
     </string>
     <string name="donate_line">  
         "Vind je dit een goede app? Vertel het ons door een donatie op http://junkcode.net voor verdere ontwikkeling. \n"
