--- a/translations/values-pt-rBR/help.xml
+++ b/translations/values-pt-rBR/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">Melhoramento do app</string>
     <string name="text_faq_improve">"  
         <b>Eu não gosto de algo</b>\n
-         \u00A0\u00A0 Deixe-nos saber o que - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Deixe-nos saber o que - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Eu encontrei um bug</b>\n
          \u00A0\u00A0 Poste ele aqui http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Eu tenho uma ideia para uma nova função</b>\n
-         \u00A0\u00A0 Deixe-nos saber o que - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Deixe-nos saber o que - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Eu quero ajudar com a traducão/ícones/...</b>\n
-         \u00A0\u00A0 Alguns recursos já estão aqui http://github.com/JunkCode/wtTactMap Você pode propor modificações ou adicionar novas coisas. Se você tem alguma pergunta ou outras ideais deixe-nos saber - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Alguns recursos já estão aqui http://github.com/JunkCode/wtTactMap Você pode propor modificações ou adicionar novas coisas. Se você tem alguma pergunta ou outras ideais deixe-nos saber - https://github.com/JunkCode/wtTactMap \n\n
           
     </string>
     
