--- a/translations/values-ru/help.xml
+++ b/translations/values-ru/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">Улучшение приложения</string>
     <string name="text_faq_improve">"  
         <b>Мне кое что не нравится</b>\n
-         \u00A0\u00A0 Скажите нам, что именно вам не нравится - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Скажите нам, что именно вам не нравится - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Я нашел ошибку</b>\n
          \u00A0\u00A0 Напишите об этом http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>У меня есть идея новой функции</b>\n
-         \u00A0\u00A0 Обязательно рассажите нам - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Обязательно рассажите нам - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Я хочу помочь с переводом/иконками/...</b>\n
-         \u00A0\u00A0 Часть ресурсов уже доступна тут http://github.com/JunkCode/wtTactMap Вы можете предложить изменения или добавить что-то новое. Если у Вас возникли вопросы или другие идеи, сообщите нам - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Часть ресурсов уже доступна тут http://github.com/JunkCode/wtTactMap Вы можете предложить изменения или добавить что-то новое. Если у Вас возникли вопросы или другие идеи, сообщите нам - https://github.com/JunkCode/wtTactMap \n\n
          
     </string>
     
