--- a/translations/values-sv/help.xml
+++ b/translations/values-sv/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">Förbättra appen</string>
     <string name="text_faq_improve">"  
         <b>Det var något jag inte tyckte om</b>\n
-         \u00A0\u00A0 Låt oss veta vad du inte tyckte om- http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Låt oss veta vad du inte tyckte om- https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Jag hittade en bug</b>\n
          \u00A0\u00A0 Låt oss veta här http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Förslag till nya funktioner</b>\n
-         \u00A0\u00A0 Låt oss veta vad - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Låt oss veta vad - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Jag vill hjälpa till med översättningar/ikoner/med mera</b>\n
-         \u00A0\u00A0 En del resurser finns redan här http://github.com/JunkCode/wtTactMap Du kan föreslå fler ändringar eller förslag. Om du har några frågor så kan du ställa dem på - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 En del resurser finns redan här http://github.com/JunkCode/wtTactMap Du kan föreslå fler ändringar eller förslag. Om du har några frågor så kan du ställa dem på - https://github.com/JunkCode/wtTactMap \n\n
           
     </string>
     
