--- a/translations/values-tr/help.xml
+++ b/translations/values-tr/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">Uygulama iyileştirme</string>
     <string name="text_faq_improve">"  
         <b>I don\'t like something</b>\n
-         \u00A0\u00A0 Bize bildir - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Bize bildir - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Bir Hata Buldum!</b>\n
          \u00A0\u00A0 Buraya gönderin http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Yeni özellik için bir fikrim var</b>\n
-         \u00A0\u00A0 Bize bildir - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Bize bildir - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Yardım etmek istiyorum translation/icons/...</b>\n
-         \u00A0\u00A0 Bazı kaynaklar zaten burada http://github.com/JunkCode/wtTactMap Değişiklik önerebilir veya yeni şeyler ekleyebilirsiniz. Herhangi bir sorunuz veya başka bir fikriniz varsa bize bildirin - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Bazı kaynaklar zaten burada http://github.com/JunkCode/wtTactMap Değişiklik önerebilir veya yeni şeyler ekleyebilirsiniz. Herhangi bir sorunuz veya başka bir fikriniz varsa bize bildirin - https://github.com/JunkCode/wtTactMap \n\n
           
     </string>
     
