--- a/translations/values-zh-rTW/help.xml
+++ b/translations/values-zh-rTW/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">應用程序改進</string>
     <string name="text_faq_improve">"  
         <b>我不喜歡其中的部分內容</b>\n
-         \u00A0\u00A0 請讓我們知道! - http://junkcode.net/forum/viewforum.php?f=14 (English Only) \n\n
+         \u00A0\u00A0 請讓我們知道! - https://github.com/JunkCode/wtTactMap (English Only) \n\n
          
         <b>我發現了個BUG</b>\n
          \u00A0\u00A0 請在此發表 http://github.com/JunkCode/wtTactMap/issues?state=open (大陸部分地區可能無法訪問[我知道你在港澳台],需註冊賬號) \n\n
          
         <b>我有個新功能想法!</b>\n
-         \u00A0\u00A0 請讓我們知道! - http://junkcode.net/forum/viewforum.php?f=14 (English Only) \n\n
+         \u00A0\u00A0 請讓我們知道! - https://github.com/JunkCode/wtTactMap (English Only) \n\n
          
         <b>我想幫助 翻譯程序/設計圖標/...</b>\n
-         \u00A0\u00A0 一些資源已經在這裡 http://github.com/JunkCode/wtTactMap 您可以提出修改或添加新事物。 如果您有任何問題或其他想法請讓我們知道 - http://junkcode.net/forum/viewforum.php?f=14 (English only) \n\n
+         \u00A0\u00A0 一些資源已經在這裡 http://github.com/JunkCode/wtTactMap 您可以提出修改或添加新事物。 如果您有任何問題或其他想法請讓我們知道 - https://github.com/JunkCode/wtTactMap (English only) \n\n
          
     </string>
     
