--- a/translations/values-de/help.xml
+++ b/translations/values-de/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">App-Verbesserungen</string>
     <string name="text_faq_improve">"  
         <b>Mir gefällt dieses/jenes nicht</b>\n
-         \u00A0\u00A0 Dann lass uns das wissen - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Dann lass uns das wissen - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Ich habe einen Bug gefunden</b>\n
          \u00A0\u00A0 Bitte hier posten http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
         <b>Ich habe eine Idee für neue Funktionen</b>\n
-         \u00A0\u00A0 Auch das kannst Du uns mitteilen - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Auch das kannst Du uns mitteilen - https://github.com/JunkCode/wtTactMap \n\n
          
         <b>Ich würde gerne helfen (Übersetzung/Icons/...)</b>\n
-         \u00A0\u00A0 Einige Ressourcen sind bereits hier: http://github.com/JunkCode/wtTactMap Du kannst hier Änderungen vorschlagen oder Neues hinzufügen. Wenn Du weitere Fragen oder Ideen hast, kannst Du uns gerne schreiben - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+         \u00A0\u00A0 Einige Ressourcen sind bereits hier: http://github.com/JunkCode/wtTactMap Du kannst hier Änderungen vorschlagen oder Neues hinzufügen. Wenn Du weitere Fragen oder Ideen hast, kannst Du uns gerne schreiben - https://github.com/JunkCode/wtTactMap \n\n
          
     </string>
     
