--- a/translations/values-pt-rBR/strings.xml
+++ b/translations/values-pt-rBR/strings.xml
@@ -50,9 +50,9 @@
     <string name="info_msg">
         "Esse é o app não-oficial feito por fans do War Thunder!\n"
         "Esse app ainda está em beta, mas sinta-se livre para contatar-nos sobre bugs ou novas ideias no endereço:\n"
-        "http://junkcode.net/forum \n"
+        "https://github.com/JunkCode/wtTactMap \n"
         "\n"
-        "Nós estamos procurando pessoas para traduzirem este app, se você deseja ajudar veja: http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \n"
+        "Nós estamos procurando pessoas para traduzirem este app, se você deseja ajudar veja: http://wiki.junkcode.net/doku.php/support:wt_tactical_map:translations \n"
     </string>
     <string name="donate_line">  
         "Você gosta deste App? Mostre isso doando em: http://junkcode.net para desenvolvimento futuro. \n"
