--- a/translations/values-zh/help.xml
+++ b/translations/values-zh/help.xml
@@ -41,16 +41,16 @@
     <string name="faq_improvement">应用程序改进</string>
     <string name="text_faq_improve">"  
         <b>我不喜欢其中的部分内容</b>\n
-         \u00A0\u00A0 请让我们知道! - http://junkcode.net/forum/viewforum.php?f=14 (English Only) \n\n
+         \u00A0\u00A0 请让我们知道! - https://github.com/JunkCode/wtTactMap (English Only) \n\n
          
         <b>我发现了个BUG</b>\n
          \u00A0\u00A0 请在此发表 http://github.com/JunkCode/wtTactMap/issues?state=open (大陆部分地区可能无法访问,需注册账号) \n\n
          
         <b>我有个新功能想法!</b>\n
-         \u00A0\u00A0 请让我们知道! - http://junkcode.net/forum/viewforum.php?f=14 (English Only) \n\n
+         \u00A0\u00A0 请让我们知道! - https://github.com/JunkCode/wtTactMap (English Only) \n\n
          
         <b>我想帮助 翻译程序/设计图标/...</b>\n
-         \u00A0\u00A0 一些资源已经在这里 http://github.com/JunkCode/wtTactMap 您可以提出修改或添加新事物。 如果您有任何问题或其他想法请让我们知道 - http://junkcode.net/forum/viewforum.php?f=14 (English only) \n\n
+         \u00A0\u00A0 一些资源已经在这里 http://github.com/JunkCode/wtTactMap 您可以提出修改或添加新事物。 如果您有任何问题或其他想法请让我们知道 - https://github.com/JunkCode/wtTactMap (English only) \n\n
          
     </string>
     
